  credentials (:ref:`secret <create-k8s-secret>`) 
  referenced from a MongoDB resource be in the same namespace.

- Adds OpenShift installation files (|yaml| file and Helm chart
  configuration).


Ops Manager Resource Changes (Alpha Release)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Supports highly available :ref:`Ops Manager resources
  <k8s-om-specification>` by introducing the ``spec.replicas`` setting.

- Runs |k8s-pods| as a non-root user.

.. _ent-op-1.3.0:

|k8s-op-full| 1.3.0
-------------------

*Released 2019-10-25*

.. important::

   This release introduces significant changes that may not be 
   compatible with previous deployments or resource configurations. Read
   :doc:`/tutorial/migrate-to-single-resource` before installing or
   upgrading the |k8s-op-short|.

Specification Schema Changes
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Moves to a
  :doc:`one cluster per project configuration </tutorial/migrate-to-single-resource>`.
  This follows the warnings introduced in a
  :ref:`previous version of the operator <ent-op-1.2.3>`.
  The operator now requires each cluster to be contained within a new
  project.

- Authentication settings are now contained within the
  :ref:`security section <security-settings>` of the MongoDB resource
  specification rather than the project ConfigMap.

- Replaces the ``project`` field with the
  :setting:`spec.opsManager.configMapRef.name` or
  :setting:`spec.cloudManager.configMapRef.name` fields.

- :ref:`User resources <manage-db-users>` now refer to MongoDB resources
  rather than project ConfigMaps.

- No longer requires ``data.projectName`` in the project ConfigMap. The
  name of the project defaults to the name of the MongoDB resource in
  |k8s|.

Ops Manager Resource Changes (Alpha Release)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

This release introduces signficant changes to the |onprem| resource's
architecture. The |onprem| application database is now managed by
the |k8s-op-short|, not by |onprem|.
