@@ -62,6 +62,16 @@ resources.
 
    *Required*. Name of the MongoDB |k8s| resource you are creating.
 
+.. opsmgrkube:: spec.replicas
+
+   *Type*: number
+
+   *Required*. Number of |onprem| instances to run in parallel. 
+   
+   The minimum accepted value is ``1``.
+
+   .. include:: /includes/note-highly-available-om.rst
+
 .. opsmgrkube:: spec.version
 
    *Type*: number
@@ -134,7 +144,7 @@ Optional |onprem| Resource Settings
    *Type*: string
 
    |k8s| assigns each |k8s-pod| a |fqdn|. The |k8s-op-short| calculates 
-   the |fqdn| for each |k8s-pod| using a provided ``clusterName``. |k8s| 
+   the |fqdn| for each |k8s-pod| using a provided ``clusterName``. |k8s|
    does not provide an |api| to query these hostnames.
 
 .. opsmgrkube:: spec.configuration
