@@ -3,6 +3,7 @@ kind: MongoDBOpsManager
 metadata:
  name: om
 spec:
+ replicas: 1
  version: 4.2.0
  adminCredentials: ops-manager-admin
  configuration:
