@@ -4,6 +4,7 @@ kind: MongoDBOpsManager
 metadata:
   name: <myopsmanager>
 spec:
+  replicas: 1
   version: <opsmanagerversion>
   adminCredentials: <adminusercredentials> # Should match metadata.name
                                            # in the Kubernetes secret
