@@ -46,7 +46,7 @@ To deploy an |onprem| resource you must:
         --from-literal=Username="<username>"
         --from-literal=Password="<password>"  
         --from-literal=FirstName="<firstname>" 
-        --from-literal=LastName="<lastname>>"
+        --from-literal=LastName="<lastname>"
         -n <namespace>
 
 Considerations
