@@ -53,7 +53,8 @@ Ops Manager Resource Changes (Alpha Release)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 - Supports highly available :ref:`Ops Manager resources
-  <k8s-om-specification>` by introducing the ``spec.replicas`` setting.
+  <k8s-om-specification>` by introducing the :opsmgrkube:`spec.replicas`
+  setting. 
 
 - Runs |k8s-pods| as a non-root user.
 
